Fix a bug Techs when too long on Works and Work

--- a/src/components/work/work.module.css
+++ b/src/components/work/work.module.css
@@ -24,6 +24,7 @@
 .techs {
   margin-top: 0.75rem;
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   gap: 0.5rem;
 }
