--- a/src/components/works/works.module.css
+++ b/src/components/works/works.module.css
@@ -18,6 +18,7 @@
 .techs {
   margin-top: 0.25rem;
   display: flex;
+  flex-wrap: wrap;
   padding: 0 0.5em;
   list-style: none;
   gap: 0.5rem;
